versions/3.7/en/editor/publish/publish-taobao-mini-game.md
# Publish to Taobao Mini Game

## Environment Configuration

- Download [Taobao Mini Game Studio](https://developer.taobao.com/?spm=a219a.15212435.0.0.6a14669aEQ2g6k) to the desktop and install it.

- Download [Taobao](https://market.m.taobao.com/app/fdilab/download-page/main/index.html) and install it on your mobile device.

- The minimum version supported of the Taobao client on Android is 10.22.30  and on iOS is 10.22.30.

## Publishing Process

Use Cocos Creator to open the project to be published, select **Taobao Mini Game** in **Platform** of the **Build** panel, and then click **Build**.

![build option](./publish-taobao-mini-game/build_option.png)

### Parameter Configuration

The specific filling rules for related parameter configuration are as follows:

- **Main Package Compression Type**

  Set the compression type of the main package. For specific content, please refer to the document [Asset Bundle — Compression Type](../../asset/bundle.md#compression-type).

- **Configure Main Package as Remote Package**

  This is an optional item and needs to be used in conjunction with the option **Resource Server Address**.<br>
   After checking, the main package will be configured as a remote package and built with its related dependent resources into the built-in Asset Bundle — [main](../../asset/bundle.md#the-built-in-Asset-Bundle) under the release package directory remote.Developers need to upload the entire remote folder to the remote server.

- **Start Scene Asset Bundle**

  This option is optional.<br>
  If set, the start scene and its related dependent resources are built into the built-in Asset Bundle - [start-scene](../../asset/bundle.md#the-built-in-asset-bundle) to speed up the resource loading of the start scene.

- **Resource Server Address**

  This is an optional item used to fill in the address where resources are stored on a remote server. After building, developers need to manually upload the remote folder under the release package directory to the filled-in resource server address.

- **Separate Engine**
  This option is optional.<br>
  After checking, the initial package size of the game can be reduced. You can refer to the document [Usage Instructions](wechatgame-plugin.md#how-to-use) for instructions on how to use it. Please select Taobao Mini Game as the building platform.

### Running Preview

- After the build is finished, click the folder icon button in the bottom left corner of **Build Task**, you can see that the project folder `taobao-mini-game` is created in the `build` directory of the project, which already contains the configuration file `game.json` for the Taobao Mini Game environment.

![build](./publish-taobao-mini-game/build.png)

- Use **Taobao Mini Game Studio** to open the `taobao-mini-game` folder generated by the build to open the Taobao Mini Game project and preview/debug the game content.

![preview](./publish-taobao-mini-game/preview.png)

## Resource management for Taobao Mini Game environment

Taobao Mini Game is similar to WeChat Mini Game in that there is a package size limit, and additional resources over **4MB** must be downloaded via network requests. <br>When the package size is too large, configure the **Resource Server Address** option in the **Build** panel to upload the resources to a remote server, please refer to the [Upload Resources to Remote Server](../../asset/cache-manager.md) documentation.

After the game starts, the engine will automatically download resources from the remote server address. Once the resources are downloaded, the engine's cache manager will record the save paths of these resources. This information is used to automatically delete some cached game resources when the cache space is insufficient. Please refer to [Cache Manager](../../asset/cache-manager.md) for more details.

## Restrictions for Taobao Mini Game

Work on adapting the Taobao Mini Game is not completely finished yet, and it is known that the text rendering may not work well on low-end machines. And the following modules are still not supported:

- WebView
- VideoPlayer
- Custom Fonts

The above features are expected to be gradually supported in future updates, and we will continue to communicate closely with the engineers of Taobao Mini Game to continuously optimize the adaptation effect.

## References

- [Taobao Document Center - CN](https://open.taobao.com/v2/doc#/abilityToOpen?docType=1&docId=121213&treeId=804)
